Changes
-------

1.1 (Dev)

- TODO Issue #19
- Updated middleware documentation. (Issue #33)

1.0.1 (2016-04-10)
- Fix migration issues with custom User models. (Issue #31, Pull Request #26)

1.0 (2016-02-14)

- Update to use User PK instead of ID. (Pull Request #20)
- Use proper URL tag for user search, listing templates. (Pull Requests #21, #22)
- Add Impersonation Log support. (Issue #7, Issue #28, Pull Request #23)
- Add support for Django 1.9 (Pull Request #24)
- Adding unicode_literals for Py3 compatibility. (Issue  #29)

0.9.2 (2015-08-24)

- Add http refer specific setting because it broke prevoius usage. (Issue #24, Refs Issue #17)

0.9.1 (2015-04-16)

- Fix unicode issue with redirect variables. (Issue #21)
- Add redirect to previous impersonation screen. (Issue #17, Pull Request #17)
- Django 1.8 compatibility. (Pull Request #19)

0.9.0 (2014-09-30)

- Split search query into terms. (Pull Request #15)
- Edge case bug addressing different versions of Django in different environments. (Issue #15)
- Moved LOGIN_URL to function to avoid circular import issues. (Pull Request #14)
- Customize search fields and query type. (Issue #14, Pull Request #13)
- Django 1.7 compat changes. (Refs Pull Request #16)

0.8.1 (2013-11-09)

- Store user ID for Django 1.6 serialization support. (Issue #12, Pull Request #11)
- Updated Authors & Changelog
- Updated tox config to include Django 1.6 environments

0.8.0 (2013-08-24)

- Added "impersonator" to request object. (Issue #5)
- Ditched custom import method for django importlib. (Issue #6)
- Updated Authors & Changelog
- Added session_begin and session_end signals. (Issue #8, Pull Request #7)

0.7.0 (2013-03-28)

- Added Python 3.3 support.

0.6.0 (2013-03-21)

- Added Django 1.5 support
- Added full test coverage support (Issue #1)

0.5.3 (2012-06-20)

- Fixed Issue impersonating with a staff user (Issue #4)

0.5.2 (2012-03-20)

- Minor updates. Authors and changelog file

0.5.1 (2012-03-04):
